--- a/build-ps/debian/changelog
+++ b/build-ps/debian/changelog
@@ -1,3 +1,9 @@
+percona-server-5.6 (5.6.20-rel68.0) unstable; urgency=low
+
+  * Added mysqld-debug
+
+ -- Tomislav Plavcic <tomislav.plavcic@percona.com>  Tue, 26 Aug 2014 16:18:06 +0200
+
 percona-server-5.6 (5.6.19-rel67.0) unstable; urgency=low
 
   * Fixed missing libperconaserverclient library
