--- a/man/mysqladmin.1
+++ b/man/mysqladmin.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysqladmin\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 11/06/2015
+.\"      Date: 01/14/2016
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.5
 .\"  Language: English
 .\"
-.TH "\FBMYSQLADMIN\FR" "1" "11/06/2015" "MySQL 5\&.5" "MySQL Database System"
+.TH "\FBMYSQLADMIN\FR" "1" "01/14/2016" "MySQL 5\&.5" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -215,7 +215,7 @@ Kill server threads\&. If multiple thread ID values are given, there must be no 
 .sp -1
 .IP \(bu 2.3
 .\}
-old\-password \fInew\-password\fR
+old\-password \fInew_password\fR
 .sp
 This is like the
 password
@@ -231,10 +231,10 @@ Section\ \&6.1.2.4, \(lqPassword Hashing in MySQL\(rq\&.)
 .sp -1
 .IP \(bu 2.3
 .\}
-password \fInew\-password\fR
+password \fInew_password\fR
 .sp
 Set a new password\&. This changes the password to
-\fInew\-password\fR
+\fInew_password\fR
 for the account that you use with
 \fBmysqladmin\fR
 for connecting to the server\&. Thus, the next time you invoke
@@ -242,7 +242,7 @@ for connecting to the server\&. Thus, the next time you invoke
 (or any other client program) using the same account, you will need to specify the new password\&.
 .sp
 If the
-\fInew\-password\fR
+\fInew_password\fR
 value contains spaces or other characters that are special to your command interpreter, you need to enclose it within quotation marks\&. On Windows, be sure to use double quotation marks rather than single quotation marks; single quotation marks are not stripped from the password, but rather are interpreted as part of the password\&. For example:
 .sp
 .if n \{\
@@ -1158,7 +1158,7 @@ localhost, the Unix socket file to use, or, on Windows, the name of the named pi
 Options that begin with
 \fB\-\-ssl\fR
 specify whether to connect to the server using SSL and indicate where to find SSL keys and certificates\&. See
-Section\ \&6.3.9.4, \(lqSSL Command Options\(rq\&.
+Section\ \&6.3.9.5, \(lqSSL Command Options\(rq\&.
 .RE
 .sp
 .RS 4
@@ -1282,7 +1282,7 @@ The maximum number of seconds to wait for server shutdown\&. The default value i
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2015, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2016, Oracle and/or its affiliates. All rights reserved.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
