--- a/man/ndb_mgm.1
+++ b/man/ndb_mgm.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_mgm\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 11/06/2015
+.\"      Date: 01/14/2016
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.5
 .\"  Language: English
 .\"
-.TH "\FBNDB_MGM\FR" "1" "11/06/2015" "MySQL 5\&.5" "MySQL Database System"
+.TH "\FBNDB_MGM\FR" "1" "01/14/2016" "MySQL 5\&.5" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -107,8 +107,8 @@ T{
 .PP
 -t
 T}:T{
-Set the number of times to retry a connection before giving up; 0 means
-          1 attempt only (and no retries)
+Set the number of times to retry a connection before giving up; synonym
+          for --connect-retries
 T}:T{
 .PP
 All MySQL 5.5 based releases
@@ -248,7 +248,7 @@ Section\ \&18.5.2, \(lqCommands in the MySQL Cluster Management Client\(rq\&.
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2015, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2016, Oracle and/or its affiliates. All rights reserved.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
