--- a/man/ndbinfo_select_all.1
+++ b/man/ndbinfo_select_all.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndbinfo_select_all\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 11/06/2015
+.\"      Date: 01/14/2016
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.5
 .\"  Language: English
 .\"
-.TH "\FBNDBINFO_SELECT_AL" "1" "11/06/2015" "MySQL 5\&.5" "MySQL Database System"
+.TH "\FBNDBINFO_SELECT_AL" "1" "01/14/2016" "MySQL 5\&.5" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -43,21 +43,17 @@ database\&. It is included with the MySQL Cluster distribution beginning with My
 .PP
 Not all
 ndbinfo
-tables can be accessed by this program\&.
-ndbinfo_select_all
-can access the
-counters,
-diskpagebuffer,
-logbuffers,
-logspaces,
-nodes,
-resources,
-threadblocks,
-threadstat,
-threadblocks,
-threadstat, and
-transporters
-tables\&.
+tables available in the
+\fBmysql\fR
+client can be read by this program\&. In addition,
+\fBndbinfo_select_all\fR
+can show information about some tables internal to
+ndbinfo
+which cannot be accessed using SQL, including the
+tables
+and
+columns
+metadata tables\&.
 .PP
 To select from one or more
 ndbinfo
@@ -289,7 +285,7 @@ to set the time between loops\&.
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2015, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2016, Oracle and/or its affiliates. All rights reserved.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
